First draft of HTML layout

--- a/index.html
+++ b/index.html
@@ -10,14 +10,87 @@ Proyecto: Resu.me
 	<title>Diego</title>
 </head>
 <body>
+	<!-- Navigation of the landing page -->
+	<nav class="nav container">
+		<ul class="nav__menu">
+			<li><a href="#about">ABOUT</a></li>
+			<li><a href="#features">FEATURES</a></li>
+			<li><a href="#images">IMAGES</a></li>
+			<li><a href="#contact">CONTACT US</a></li>
+		</ul>
+		<img class="nav__logo" src="" alt="Resu.me logo">
+		<ul class="nav__menu nav__menu--users">
+			<li><a href="">LOG IN</a></li>
+			<li><a href="">SIGN UP</a></li>
+		</ul>
+	</nav>
+
 	<!-- Header of the landing page -->
-	<header>
-		
+	<header class="header container">
+		<section class="header__title">
+			<h1><span style="color: #F5DF4D;">Your</span> portfolio, made easy</h1>
+			<h5>Meet the only CV management platform you need</h5>
+		</section>
+
+		<section class="header__image">
+			<img src="" alt="Portfolios">
+		</section>
 	</header>
 
 	<!-- Body of the landing page -->
 	<main>
 
+		<!-- About section (mission and vision) -->
+		<section class="about container">
+			<div class="about__title">
+				<h4>A CERCA DE</h4>
+				<h2></h2>
+			</div>
+			<div class="about__item">
+				<h3>Misión</h3>
+				<p>Consectetur eaque ex sunt reprehenderit culpa reprehenderit Quos iste quo placeat illum molestiae ullam? Quo.</p>
+			</div>
+			<div class="about__item">
+				<h3>Visión</h3>
+				<p>Elit nihil velit quod ad sunt, officia. Tempore reiciendis aspernatur facere beatae officia Id repellat!</p>
+			</div>
+		</section>
+
+		<!-- Description of services -->
+		<section class="features container">
+			<div class="features__title">
+				<h4>SERVICIOS</h4>
+				<h2>¿Listo para un portafolio y CV reales?</h2>
+			</div>
+			<div class="features__item">
+				<h3></h3>
+				<p>Lorem dolor hic maxime deserunt fuga Esse quo nobis iste.</p>
+			</div>
+			<div class="features__item">
+				<h3></h3>
+				<p>Ipsum optio voluptate minima nam dolorum, vel? Est doloribus perspiciatis</p>
+			</div>
+			<div class="features__item">
+				<h3></h3>
+				<p>Consectetur neque iste sequi asperiores assumenda? Dolorem illo aspernatur voluptates?</p>
+			</div>
+		</section>
+
+		<!-- Image gallery -->
+		<section class="gallery container">
+			<div class="gallery__title">
+				<h4>IMAGENES</h4>
+				<p>Mira a otros utilizando Resu.me</p>
+			</div>
+		</section>
+
+		<!-- Contact form -->
+		<section class="contact container">
+			<div class="contact__title">
+				<h4></h4>
+				<p>¿Nos necesitas? Contáctanos</p>
+			</div>
+		</section>
 	</main>
 
 	<!-- Foot of the landing page -->
@@ -25,6 +98,8 @@ Proyecto: Resu.me
 
 	</footer>
 
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+	<link rel="stylesheet" href="static/css/normalize.css">
+	<link rel="stylesheet" href="static/css/styles.css">
 </body>
 </html>
