Add Carousel effect to galery.
Example taken from https://codepen.io/tianyili/pen/qBEdeoy

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
 				<h5>IMÁGENES</h5>
 				<h1>Mira a otros utilizando Resu.me</h1>
 			</div>
+
+			<div class="gallery__carousel">
+				<img class="gallery__carousel__image" src="static/images/slide-1.png" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-2.png" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-3.png" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-4.png" alt="">
+			</div>
 		</section>
 
 		<!-- Contact form -->
