Update features table

--- a/index.html
+++ b/index.html
@@ -85,27 +85,27 @@
 			<table class="features__table">
 				<tr class="features__table__row">
 					<th>Servicio</th>
-					<th>Resu.me</th>
+					<th style="background-color: rgb(var(--primary-color))">Resu.me</th>
 					<th>Competencia</th>
 				</tr>
 				<tr class="features__table__row">
 					<td>Alojamiento gratis de tu portafolio</td>
-					<td><i class="fas fa-check" style="color: #ffd369"></i></td>
+					<td><i class="fas fa-check" style="color: rgb(var(--primary-color))"></i></td>
 					<td><i class="fas fa-times"></i></td>
 				</tr>
 				<tr class="features__table__row">
 					<td>Multiples diseños para tu portafolio</td>
-					<td><i class="fas fa-check" style="color: #ffd369"></i></td>
+					<td><i class="fas fa-check" style="color: rgb(var(--primary-color))"></i></td>
 					<td><i class="fas fa-check"></i></td>
 				</tr>
 				<tr class="features__table__row">
 					<td>Soporte de dominio personalizado</td>
-					<td><i class="fas fa-check" style="color: #ffd369"></i></td>
+					<td><i class="fas fa-check" style="color: rgb(var(--primary-color))"></i></td>
 					<td><i class="fas fa-check"></i></td>
 				</tr>
 				<tr class="features__table__row">
 					<td>Generador de CV automático</td>
-					<td><i class="fas fa-check" style="color: #ffd369"></i></td>
+					<td><i class="fas fa-check" style="color: rgb(var(--primary-color))"></i></td>
 					<td><i class="fas fa-times"></i></td>
 				</tr>
 			</table>
@@ -150,17 +150,17 @@
 			<div class="footer--social">
 				<ul>
 					<li>
-						<a href="https://twitter.com">
+						<a href="https://twitter.com" target="blank">
 							<i class="fab fa-twitter"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://facebook.com">
+						<a href="https://facebook.com" target="_blank">
 							<i class="fab fa-facebook-f"></i>
 						</a>
 					</li>
 					<li>
-						<a href="https://instagram.com">
+						<a href="https://instagram.com" target="_blank">
 							<i class="fab fa-instagram"></i>
 						</a>
 					</li>
