--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Author: Diego Alberto Quiroz García -->
 <!-- Desarrollo de Aplicaciones web -->
-<!-- 3 de febrero de 2021 -->
+<!-- 1 de febrero de 2021 -->
 <!-- Proyecto: Resu.me -->
 
 <!DOCTYPE html>
@@ -21,7 +21,7 @@
 				<li><a href="#images">IMÁGENES</a></li>
 				<li><a href="#contact">CONTÁCTANOS</a></li>
 			</ul>
-			<img class="nav__logo" src="" alt="Resu.me logo">
+			<img class="nav__logo" src="static/images/ResumeLogo.png" alt="Resu.me logo">
 			<ul class="nav__menu nav__menu--users">
 				<li><a href="">LOG IN</a></li>
 				<li><a href="">SIGN UP</a></li>
@@ -33,9 +33,7 @@
  que necesitarás</h4>
 		</section>
 
-		<section class="header__image">
-			<img src="" alt="Portfolios">
-		</section>
+		<img class="header__image" src="static/images/hero.png" alt="Portfolios">
 	</header>
 
 	<!-- Body of the landing page -->
@@ -46,14 +44,15 @@
 			<div class="about__title">
 				<h5>NOSOTROS</h5>
 				<h1>Nuestra misión eres tú</h1>
+				<p>Resu.me es una plataforma para crear portafolios virtuales sin necesidad de preocuparte de mantener, diseñar, crear y lanzar un sitio web. Inicia tu portafolio virtual como todo un profesional.</p>
 			</div>
 			<div class="about__item">
 				<h2>Misión</h2>
-				<p>Consectetur eaque ex sunt reprehenderit culpa reprehenderit Quos iste quo placeat illum molestiae ullam? Quo.</p>
+				<p>Ayudar a profesionales a tener un portafolio virtual, blog y Currículum de manera fácil y escalable.</p>
 			</div>
 			<div class="about__item">
 				<h2>Visión</h2>
-				<p>Elit nihil velit quod ad sunt, officia. Tempore reiciendis aspernatur facere beatae officia Id repellat!</p>
+				<p>Ser la plataforma líder en la generación de Currículums, Resúmenes y portafolios para los profesionales de mañana.</p>
 			</div>
 		</section>
 
@@ -123,6 +122,11 @@
 				<img class="gallery__carousel__image" src="static/images/slide-2.png" alt="">
 				<img class="gallery__carousel__image" src="static/images/slide-3.png" alt="">
 				<img class="gallery__carousel__image" src="static/images/slide-4.png" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-5.webp" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-6.webp" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-7.webp" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-8.jpg" alt="">
+				<img class="gallery__carousel__image" src="static/images/slide-9.webp" alt="">
 			</div>
 		</section>
 
@@ -136,7 +140,7 @@
 			<form action="POST" class="contact__form">
 				<input class="contact__form__input" id="name" type="text" placeholder="Sirius Black">
  				<input class="contact__form__input" id="email" type="email" placeholder="sirius@gmail.com">
-				<textarea class="contact__form__input" id="message" name="" cols="30" rows="10"  placeholder="Message..."></textarea>
+				<textarea class="contact__form__input" id="message" name="" cols="30" rows="10"  placeholder="Mensaje..."></textarea>
 				<label for="suscribe">Suscribir a lista de correo <input id="suscribe" type="checkbox"></label>
 				<input class="contact__form__input" id="submit" type="button" value="Enviar">
 		</section>
