--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 			</div>
 			<div class="about__item">
 				<h2>Misión</h2>
-				<p>Ayudar a profesionales a tener un portafolio virtual, blog y Currículum de manera fácil y escalable.</p>
+				<p>Ayudar a profesionales a tener un portafolio virtual, blog y currículum de manera fácil y escalable.</p>
 			</div>
 			<div class="about__item">
 				<h2>Visión</h2>
-				<p>Ser la plataforma líder en la generación de Currículums, Resúmenes y portafolios para los profesionales de mañana.</p>
+				<p>Ser la plataforma líder en la generación de currículums, resúmenes y portafolios para los profesionales de mañana.</p>
 			</div>
 		</section>
 
@@ -93,7 +93,7 @@
 					<td><i class="fas fa-times"></i></td>
 				</tr>
 				<tr class="features__table__row">
-					<td>Multiples diseños para tu portafolio</td>
+					<td>Múltiples diseños para tu portafolio</td>
 					<td><i class="fas fa-check" style="color: rgb(var(--primary-color))"></i></td>
 					<td><i class="fas fa-check"></i></td>
 				</tr>
